--- a/machine_configurations/roles/big_dev/tasks/main.yml
+++ b/machine_configurations/roles/big_dev/tasks/main.yml
@@ -14,8 +14,10 @@
   - pandoc
   - python3.6
   - python3.6-dev
+  - python3.6-venv
   - python3.4
   - python3.4-dev
+  - python3.4-venv
   - vagrant
   - vagrant-lxc
   - virtualbox
