--- a/machine_configurations/roles/small_dev/tasks/main.yml
+++ b/machine_configurations/roles/small_dev/tasks/main.yml
@@ -16,6 +16,7 @@
   - nmap
   - python3-pip
   - python3-dev
+  - python3-venv
   - python-pip
   - python-dev
   - sshpass # so that Ansible can log in using password (needed in RPi configuration)
