Ansible: tmux opening new panes and windows in cwd

--- a/machine_configurations/roles/small_dev/files/.tmux.conf
+++ b/machine_configurations/roles/small_dev/files/.tmux.conf
@@ -7,6 +7,11 @@ set-environment -g EDITOR $HOME/bin/tmux_edit.sh
 # tmux has some problems with setting a pager
 set-environment -g PAGER less
 
+# make new windows and panes be started in the same directory
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
